Adding filter route
